# mcp-google-ads

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_refresh_token.py  smoke_test.py
src/mcp_google_ads/: __init__.py  auth.py  client.py  errors.py  gaql.py  safety.py  server.py
src/mcp_google_ads/tools/: __init__.py  ad.py  ad_group.py  campaign.py  keyword.py  read.py
tests/unit/: conftest.py  test_ad.py  test_ad_group.py  test_auth.py  test_campaign.py  test_client.py  test_errors.py  test_gaql.py  test_keyword.py  test_read.py  test_safety.py
