[project]
name = "mcp-google-ads"
version = "0.1.0"
description = "MCP server for Google Ads API — read and mutate campaigns"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "google-ads>=24.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: integration tests requiring real credentials"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
